// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockaid Banner Alert should render 'danger' UI when securityAlertResponse.result_type is 'Malicious 1`] = `
<div
  class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-danger mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-error-muted mm-box--rounded-sm"
  data-testid="security-provider-banner-alert"
>
  <span
    class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-error-default"
    style="mask-image: url('./images/icons/danger.svg');"
  />
  <div
    class="mm-box mm-box--min-width-0"
  >
    <p
      class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
    >
      This is a deceptive request
    </p>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
    >
      If you approve this request, a third party known for scams might take all your assets.
    </p>
    <div
      class="disclosure"
    >
      <details>
        <summary
          class="disclosure__summary is-arrow"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
          >
            See details
          </p>
          <span
            class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
            style="mask-image: url('./images/icons/arrow-up.svg');"
          />
        </summary>
        <div
          class="disclosure__content normal"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
          >
            <span>
               
              Something doesn't look right? 
              <a
                class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.4.1%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Malicious%22%7D&utm_source=metamask-ppom"
                rel="noopener noreferrer"
                target="_blank"
              >
                Report an issue
              </a>
              
               
            </span>
          </p>
        </div>
        <div
          class="disclosure__footer"
        />
      </details>
    </div>
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
    >
      <span
        class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
        style="mask-image: url('./images/icons/security-tick.svg');"
      />
      <span>
         
        Powered by 
        <a
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          href="https://blockaid.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Blockaid
        </a>
        
         
      </span>
    </p>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render 'warning' UI when securityAlertResponse.result_type is 'Failed 1`] = `
<div
  class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
  data-testid="security-provider-banner-alert"
>
  <span
    class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
    style="mask-image: url('./images/icons/danger.svg');"
  />
  <div
    class="mm-box mm-box--min-width-0"
  >
    <p
      class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
    >
      This is a deceptive request
    </p>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
    >
      If you approve this request, a third party known for scams might take all your assets.
    </p>
    <div
      class="disclosure"
    >
      <details>
        <summary
          class="disclosure__summary is-arrow"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
          >
            See details
          </p>
          <span
            class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
            style="mask-image: url('./images/icons/arrow-up.svg');"
          />
        </summary>
        <div
          class="disclosure__content normal"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
          >
            <span>
               
              Something doesn't look right? 
              <a
                class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.4.1%22%2C%22classification%22%3A%22error%22%2C%22resultType%22%3A%22Error%22%7D&utm_source=metamask-ppom"
                rel="noopener noreferrer"
                target="_blank"
              >
                Report an issue
              </a>
              
               
            </span>
          </p>
        </div>
        <div
          class="disclosure__footer"
        />
      </details>
    </div>
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
    >
      <span
        class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
        style="mask-image: url('./images/icons/security-tick.svg');"
      />
      <span>
         
        Powered by 
        <a
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          href="https://blockaid.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Blockaid
        </a>
        
         
      </span>
    </p>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render 'warning' UI when securityAlertResponse.result_type is 'Warning 1`] = `
<div
  class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
  data-testid="security-provider-banner-alert"
>
  <span
    class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
    style="mask-image: url('./images/icons/danger.svg');"
  />
  <div
    class="mm-box mm-box--min-width-0"
  >
    <p
      class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
    >
      This is a deceptive request
    </p>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
    >
      If you approve this request, a third party known for scams might take all your assets.
    </p>
    <div
      class="disclosure"
    >
      <details>
        <summary
          class="disclosure__summary is-arrow"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
          >
            See details
          </p>
          <span
            class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
            style="mask-image: url('./images/icons/arrow-up.svg');"
          />
        </summary>
        <div
          class="disclosure__content normal"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
          >
            <span>
               
              Something doesn't look right? 
              <a
                class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.4.1%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%7D&utm_source=metamask-ppom"
                rel="noopener noreferrer"
                target="_blank"
              >
                Report an issue
              </a>
              
               
            </span>
          </p>
        </div>
        <div
          class="disclosure__footer"
        />
      </details>
    </div>
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
    >
      <span
        class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
        style="mask-image: url('./images/icons/security-tick.svg');"
      />
      <span>
         
        Powered by 
        <a
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          href="https://blockaid.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Blockaid
        </a>
        
         
      </span>
    </p>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render details section even when features is not provided 1`] = `
<div>
  <div
    class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
    data-testid="security-provider-banner-alert"
  >
    <span
      class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
      style="mask-image: url('./images/icons/danger.svg');"
    />
    <div
      class="mm-box mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
      >
        This is a deceptive request
      </p>
      <p
        class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
      >
        If you approve this request, a third party known for scams might take all your assets.
      </p>
      <div
        class="disclosure"
      >
        <details>
          <summary
            class="disclosure__summary is-arrow"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
            >
              See details
            </p>
            <span
              class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-up.svg');"
            />
          </summary>
          <div
            class="disclosure__content normal"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
            >
              <span>
                 
                Something doesn't look right? 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.4.1%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%7D&utm_source=metamask-ppom"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Report an issue
                </a>
                
                 
              </span>
            </p>
          </div>
          <div
            class="disclosure__footer"
          />
        </details>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
      >
        <span
          class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
          style="mask-image: url('./images/icons/security-tick.svg');"
        />
        <span>
           
          Powered by 
          <a
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            href="https://blockaid.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Blockaid
          </a>
          
           
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render details when provided 1`] = `
<div>
  <div
    class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
    data-testid="security-provider-banner-alert"
  >
    <span
      class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
      style="mask-image: url('./images/icons/danger.svg');"
    />
    <div
      class="mm-box mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
      >
        This is a deceptive request
      </p>
      <p
        class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
      >
        If you approve this request, a third party known for scams might take all your assets.
      </p>
      <div
        class="disclosure"
      >
        <details>
          <summary
            class="disclosure__summary is-arrow"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
            >
              See details
            </p>
            <span
              class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-up.svg');"
            />
          </summary>
          <div
            class="disclosure__content normal"
          >
            <ul
              class="mm-box mm-text mm-text--body-md mm-text--overflow-wrap-break-word mm-box--color-text-default"
            >
              <li>
                • 
                Operator is an EOA
              </li>
              <li>
                • 
                Operator is untrusted according to previous activity
              </li>
            </ul>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
            >
              <span>
                 
                Something doesn't look right? 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.4.1%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%2C%22reproduce%22%3A%22%5B%5C%22Operator%20is%20an%20EOA%5C%22%2C%5C%22Operator%20is%20untrusted%20according%20to%20previous%20activity%5C%22%5D%22%7D&utm_source=metamask-ppom"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Report an issue
                </a>
                
                 
              </span>
            </p>
          </div>
          <div
            class="disclosure__footer"
          />
        </details>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
      >
        <span
          class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
          style="mask-image: url('./images/icons/security-tick.svg');"
        />
        <span>
           
          Powered by 
          <a
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            href="https://blockaid.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Blockaid
          </a>
          
           
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render link to report url 1`] = `
<div>
  <div
    class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
    data-testid="security-provider-banner-alert"
  >
    <span
      class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
      style="mask-image: url('./images/icons/danger.svg');"
    />
    <div
      class="mm-box mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
      >
        This is a deceptive request
      </p>
      <p
        class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
      >
        If you approve this request, a third party known for scams might take all your assets.
      </p>
      <div
        class="disclosure"
      >
        <details>
          <summary
            class="disclosure__summary is-arrow"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
            >
              See details
            </p>
            <span
              class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-up.svg');"
            />
          </summary>
          <div
            class="disclosure__content normal"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
            >
              <span>
                 
                Something doesn't look right? 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.4.1%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%7D&utm_source=metamask-ppom"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Report an issue
                </a>
                
                 
              </span>
            </p>
          </div>
          <div
            class="disclosure__footer"
          />
        </details>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
      >
        <span
          class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
          style="mask-image: url('./images/icons/security-tick.svg');"
        />
        <span>
           
          Powered by 
          <a
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            href="https://blockaid.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Blockaid
          </a>
          
           
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render spinner when securityAlertResponse is loading 1`] = `
<div>
  <div
    class="mm-box blockaid_banner__wrapper mm-box--padding-2 mm-box--display-flex mm-box--align-items-center mm-box--rounded-sm mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
  >
    <div
      class="spinner blockaid_banner__spinner"
    >
      <svg
        class="lds-spinner"
        height="100%"
        preserveAspectRatio="xMidYMid"
        style="background: none;"
        viewBox="0 0 100 100"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g
          transform="rotate(0 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.9166666666666666s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(30 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.8333333333333334s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(60 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.75s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(90 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.6666666666666666s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(120 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.5833333333333334s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(150 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.5s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(180 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.4166666666666667s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(210 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.3333333333333333s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(240 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.25s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(270 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.16666666666666666s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(300 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="-0.08333333333333333s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
        <g
          transform="rotate(330 50 50)"
        >
          <rect
            fill="border-muted"
            height="30"
            rx="0"
            ry="0"
            width="10"
            x="45"
            y="0"
          >
            <animate
              attributeName="opacity"
              begin="0s"
              dur="1s"
              repeatCount="indefinite"
              values="1;0"
            />
          </rect>
        </g>
      </svg>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-text-default"
    >
      Waiting for security alerts
    </p>
  </div>
</div>
`;
